--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/eleanip7/bamazon/issues"
   },
-  "homepage": "https://github.com/eleanip7/bamazon#readme"
+  "homepage": "https://github.com/eleanip7/bamazon#readme",
+  "dependencies": {
+    "global": "^4.4.0"
+  }
 }
